--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
             <div class="project-overlay">
                 <h3>My Portfolio</h3>
                 <p>A futuristic, cyberpunk-themed portfolio showcasing my work and skills.</p>
-                <a href="" target="_blank">
+                <a href="https://github.com/Himank-P/Devfolio" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
