--- a/aboutme.html
+++ b/aboutme.html
@@ -648,12 +648,12 @@
 
 
 <script>
-    function showModal(title) {
-        document.getElementById('modal-title').textContent = title;
-        document.getElementById('modal-content').textContent = `Here's how I’ve used ${title} in my projects. (Add real examples here!)`;
-        document.getElementById('modal').classList.add('show');
-        document.body.classList.add('overflow-hidden');
-    }
+    // function showModal(title) {
+    //     document.getElementById('modal-title').textContent = title;
+    //     document.getElementById('modal-content').textContent = `Here's how I’ve used ${title} in my projects. (Add real examples here!)`;
+    //     document.getElementById('modal').classList.add('show');
+    //     document.body.classList.add('overflow-hidden');
+    // }
 
     function closeModal() {
         document.getElementById('modal').classList.remove('show');
@@ -668,8 +668,7 @@
     });
 
 
-</script>
-<script>
+
 
 
     //For Navbar
