--- a/aboutme.html
+++ b/aboutme.html
@@ -608,7 +608,7 @@
 
     <div class="cta-end" data-aos="zoom-in">
         <h2>🔥 Want to work with me?</h2>
-        <a href="contactme.html" class="btn">Get in Touch</a>
+        <a href="./contactme.html" class="btn">Get in Touch</a>
     </div><br><br>
 
 </div>
