--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <style>
         *{
             box-sizing: border-box;
+            
+        }
+
+        html{
+            overflow-x: hidden;
         }
 
         body {
@@ -23,6 +28,7 @@
             color: white;
             animation: fadeIn 1s ease-in-out;
             padding-right: 10px;
+            
         }
 
         /*For Image Cards*/
@@ -401,7 +407,7 @@
             cursor: pointer;
             transition: 0.3s ease-in-out;
             max-width: 20vw;
-            min-width: 400px;
+            min-width: 60%;
             margin-top: 15px;
             border: none;
         }
