added new featured projects

--- a/projects.html
+++ b/projects.html
@@ -349,7 +349,18 @@
       <p>A cyberpunk-themed dark-mode portfolio showcasing my skills, design taste, and featured works.</p>
       <a href="https://github.com/Himank-P/Devfolio">View on GitHub →</a>
     </div>
+    <div class="project-card">
+      <h3>GFGx BVCOE Website</h3>
+      <p>The official website for the GFGx BVCOE college society, built collaboratively with React, Tailwind CSS, and GSAP for engaging animations.</p>
+      <a href="https://github.com/Himank-P/gfgx-bvcoe-website">View on GitHub →</a>
+    </div>
+    <div class="project-card">
+      <h3>BVP ISTE Website</h3>
+      <p>A collaborative project to create the official website for the BVP ISTE college society, built with vanilla JavaScript.</p>
+      <a href="https://github.com/Himank-P/bvp-iste-website">View on GitHub →</a>
+    </div>
   </div>
+
 
   <!-- UI/UX Tools -->
   <h2 class="category-title">🧰 UI/UX Experiments</h2>
