--- a/projects.html
+++ b/projects.html
@@ -351,13 +351,13 @@
     </div>
     <div class="project-card">
       <h3>GFGx BVCOE Website</h3>
-      <p>The official website for the GFGx BVCOE college society, built collaboratively with React, Tailwind CSS, and GSAP for engaging animations.</p>
-      <a href="https://github.com/Himank-P/gfgx-bvcoe-website">View on GitHub →</a>
+      <p>The official website for the GFG×BVCOE college society, built collaboratively with React, Tailwind CSS, and GSAP for engaging animations.</p>
+      <a href="https://github.com/dev0302/GFGxBVCOE">View on GitHub →</a>
     </div>
     <div class="project-card">
       <h3>BVP ISTE Website</h3>
-      <p>A collaborative project to create the official website for the BVP ISTE college society, built with vanilla JavaScript.</p>
-      <a href="https://github.com/Himank-P/bvp-iste-website">View on GitHub →</a>
+      <p>A collaborative project to create the official website for the BVP-ISTE college society, built with vanilla JavaScript.</p>
+      <a href="https://github.com/Himank-P/BVP-ISTE">View on GitHub →</a>
     </div>
   </div>
 
