--- a/projects.html
+++ b/projects.html
@@ -357,7 +357,7 @@
     <div class="project-card">
       <h3>BVP ISTE Website</h3>
       <p>A collaborative project to create the official website for the BVP-ISTE college society, built with vanilla JavaScript.</p>
-      <a href="https://github.com/Himank-P/BVP-ISTE">View on GitHub →</a>
+      <a href="https://github.com/Vikhyat811/BVP-ISTE">View on GitHub →</a>
     </div>
   </div>
 
