--- a/index.html
+++ b/index.html
@@ -81,11 +81,20 @@
     overflow: hidden;
 }
 
+.card:hover {
+    transform: translateY(-8px);
+}
+
 .card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    transition: transform 0.4s ease-in-out;
+}
+
+.card:hover img {
+    transform: scale(1.05);
 }
 
 #locationtag {
@@ -477,6 +486,7 @@
             0 0 7px rgba(138, 43, 226, 0.6);
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
+            max-height: 250px;
         }
         #project:hover{
             transform: scale(1.05);
@@ -486,6 +496,7 @@
             height: 100%;
             display: block;
             border-radius: 10px;
+            object-fit: cover;
         }
         .project-overlay {
             position: absolute;
