--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
             0 0 7px rgba(138, 43, 226, 0.6);
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
-            max-height: 250px;
+            max-height: 500px;
+            aspect-ratio: 2/3;
         }
         #project:hover{
             transform: scale(1.05);
