--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
         #projects{
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            grid-auto-rows: 250px;
             gap: 20px;
             padding: 30px;
         }
