--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
         }
         #projects{
             display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 20px;
             padding: 30px;
         }
@@ -485,8 +486,6 @@
             0 0 7px rgba(138, 43, 226, 0.6);
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
-            max-height: 500px;
-            aspect-ratio: 2/3;
         }
         #project:hover{
             transform: scale(1.05);
